--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -14,6 +14,7 @@
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="15dp"
     android:textSize="14sp"
+        android:backgroundTint="@color/purple_700"
     app:cornerRadius="20dp"
     android:fontFamily="@font/roboto_slab_bold"
     app:layout_constraintBottom_toBottomOf="parent"
