--- a/app/src/main/res/layout/app_main_screen.xml
+++ b/app/src/main/res/layout/app_main_screen.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/teal"
     tools:context=".ui.MainActivity">
 
@@ -29,63 +29,30 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:elevation="4dp"
-                app:navigationIcon="@drawable/ic_baseline_menu_24"
                 app:contentInsetStartWithNavigation="0dp"
                 >
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textField"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:endIconDrawable="@android:drawable/ic_menu_search"
-                    app:endIconMode="custom"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
-
-                </com.google.android.material.textfield.TextInputLayout>
+<!--            <com.mancj.materialsearchbar.MaterialSearchBar-->
+<!--                    android:id="@+id/searchBar"-->
+<!--                    style="@style/MaterialSearchBarLight"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    app:mt_hint="Search courses"-->
+<!--                    app:mt_maxSuggestionsCount="10"-->
+<!--                    app:mt_menuIconDrawable="@drawable/ic_baseline_menu_24"-->
+<!--                    app:mt_navIconEnabled="true"-->
+<!--                    app:mt_navIconTint="@color/purple_700"-->
+<!--                    app:mt_navIconUseTint="true"-->
+<!--                    app:mt_roundedSearchBarEnabled="true"-->
+<!--                    app:mt_searchIconDrawable="@drawable/ic_baseline_search_24"-->
+<!--                    app:mt_searchIconTint="@color/purple_700"-->
+<!--                    app:mt_searchIconUseTint="true"-->
+<!--                    app:mt_speechMode="true"-->
+<!--                    app:mt_textCursorTint="@color/purple_700" />-->
 
 
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <FrameLayout
-        android:id="@+id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        android:textColor="@color/purple_700"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/coordinator" >
-        <fragment
-            android:layout_width="match_parent"
-            android:id="@+id/nav_host"
-            android:layout_height="match_parent"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            app:navGraph="@navigation/navigation"
-            app:defaultNavHost="true"/>
-    </FrameLayout>
-
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/purple_700"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/bottom_navigation_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
