--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,9 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.fragments.ProfileFragment">
+
+    <data>
+
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.fragments.ProfileFragment">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/profile_toolbar"
+            layout="@layout/app_main_screen"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -14,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/purple_500">
+
                 <RelativeLayout
                     android:id="@+id/circle"
                     android:layout_width="wrap_content"
@@ -24,11 +46,14 @@
                         android:id="@+id/user_image"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:layout_margin="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:contentDescription="@string/user_image_a"
                         android:padding="4dp"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/ic_baseline_account_circle_24"
-                        android:contentDescription="@string/user_image_a" />
+                        android:src="@drawable/ic_baseline_account_circle_24" />
                 </RelativeLayout>
 
                 <TextView
@@ -36,28 +61,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/circle"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="@string/user_name"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textStyle="bold"
-                    android:layout_margin="8dp"
-                    android:textSize="24sp"
                     android:textColor="@color/white"
-                    android:layout_centerHorizontal="true"
-                    />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/user_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/user_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="@string/user_address"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                    android:textStyle="bold"
-                    android:layout_margin="8dp"
-                    android:textSize="16sp"
                     android:textColor="@color/white"
-                    android:layout_centerHorizontal="true"
-                    />
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
 
@@ -67,6 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/image_block"
                 android:baselineAligned="false">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -75,24 +105,30 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:background="@color/teal_200">
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
+                            android:id="@+id/course_started_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="24sp"
+                            android:layout_gravity="center"
                             android:fontFamily="sans-serif-light"
                             android:textColor="@color/white"
-                            android:text="@string/_180k"/>
+                            android:text="@string/_10" />
+
                         <TextView
+                            android:id="@+id/started_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
                             android:fontFamily="sans-serif-light"
                             android:textColor="@color/white"
-                            android:text="@string/following">
+                            android:text="@string/started">
 
                         </TextView>
                     </LinearLayout>
@@ -106,24 +142,28 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:background="@color/purple_700">
+
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="24sp"
+                            android:layout_gravity="center"
                             android:fontFamily="sans-serif-light"
                             android:textColor="@color/white"
-                            android:text="@string/_143k"/>
+                            android:text="@string/_3" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="18sp"
                             android:fontFamily="sans-serif-light"
                             android:textColor="@color/white"
-                            android:text="@string/followers">
+                            android:text="@string/completed">
 
                         </TextView>
                     </LinearLayout>
@@ -134,7 +174,10 @@
                 android:layout_below="@id/linear"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <include layout="@layout/text_container"/>
+
+                <include layout="@layout/text_container" />
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
+    </LinearLayout>
+</layout>
