--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,20 +3,20 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/homeFragment"
             android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/home" />
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/profileFragment"
             android:icon="@drawable/ic_baseline_profile_24"
             android:title="@string/profile" />
         <item
-            android:id="@+id/nav_courses"
+            android:id="@+id/courseFragment"
             android:icon="@drawable/ic_baseline_menu_book_24"
             android:title="@string/my_courses" />
 
         <item
-            android:id="@+id/nav_notifications"
+            android:id="@+id/notificationsFragment"
             android:icon="@drawable/ic_baseline_notifications_active_24"
             android:title="@string/notifications" />
 
